# GibVK

./: .gitmodules  GibVK.sln  LearnVulkan.sln  README.md
GibVK/: GibVK.filters  GibVK.vcxproj
GibVK/Engine/: Application.cpp  Engine.hpp  Graphics.cpp  Graphics.hpp
GibVK/Engine/Renderer/: Renderer.cpp  Renderer.hpp
GibVK/Engine/Renderer/Buffers/: Buffers.cpp  Buffers.hpp
GibVK/Engine/Vulkan/: Instance.hpp  Surface.cpp  Window.cpp  Window.hpp
GibVK/Engine/Vulkan/Devices/: LogicalDevices.cpp  LogicalDevices.hpp  PhysicalDevices.cpp  PhysicalDevices.hpp  QueueFamilies.cpp
GibVK/Engine/Vulkan/Drawing/: Drawing.cpp  Drawing.hpp
GibVK/shaders/: shader.vert
LearnVulkan/: LearnVulkan.vcxproj  LearnVulkan.vcxproj.filters  README.md  main.cpp
LearnVulkanNEW/: LearnVulkanNEW.vcxproj  LearnVulkanNEW.vcxproj.filters  engine.cpp  engine.h  main.cpp
LearnVulkanNEW/Application/: HelloTriangle.cpp  HelloTriangle.h  details.h
LearnVulkanNEW/Application/Instance/: instance.cpp  instance.h
LearnVulkanNEW/Application/Validation Layers/: ValidationLayers.cpp  ValidationLayers.h
LearnVulkanNEW/Application/Window/: GLFWWindow.cpp  GLFWWindow.h
LearnVulkanNEW/Engine/: Application.cpp  Application.hpp  Engine.cpp  Engine.hpp  Graphics.cpp  Graphics.hpp
LearnVulkanNEW/Engine/Vulkan/: Instance.cpp  Surface.hpp  Window.cpp
VKGuide/: CMakeLists.txt
VKGuide/shaders/: tri_mesh_descriptors.vert
VKGuide/src/: CMakeLists.txt  vk_engine.cpp  vk_engine.h  vk_initializers.cpp  vk_initializers.h  vk_mesh.cpp  vk_mesh.h  vk_types.h
(+81 files in other folders)
